@@ -1,3 +1,9 @@
+2003-02-05  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gda/Application.cs:
+	* gnomedb/Application.cs: synced version number with its corresponding
+	C library version.
+
 2003-01-29  Duncan Mak  <duncan@ximian.com>
 
 	* gtk/Window.custom: Add some overloads.
